apps/monitoring/loki-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-external
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
      nodePort: 31100
