apps/monitoring/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 0
      containers:
        - name: loki
          image: grafana/loki:latest
          ports:
            - containerPort: 3100
          args:
            - "-config.file=/etc/loki/local-config.yaml"
          volumeMounts:
            - name: config
              mountPath: /etc/loki/local-config.yaml
              subPath: loki-config.yml
              readOnly: true
            - name: data
              mountPath: /loki
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "10m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: loki-config
        - name: data
          persistentVolumeClaim:
            claimName: loki-data
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
